--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "set NODE_ENV=production && node app.js",
     "start:dev": "set NODE_ENV=development && nodemon app.js",
-    "start:test": "set NODE_ENV=test && nodemon app.js",
-    "watch": "webpack --watch"
+    "start:test": "set NODE_ENV=test && nodemon app.js"
   },
   "dependencies": {
     "cookie-parser": "^1.4.6",
@@ -22,15 +21,7 @@
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.1.1",
-    "@types/express": "^4.17.21",
-    "babel-loader": "^9.1.3",
-    "connect-livereload": "^0.6.1",
-    "eslint": "^9.1.1",
-    "globals": "^15.1.0",
-    "livereload": "^0.9.3",
-    "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4"
+    "@types/express": "^4.17.21"
   },
   "author": {
     "name": "Cristian Camilo Naranjo Valencia",
