- Se crea el readme.md - Se crean las plantillas para la carga masiva de datos. - Se terminan los controladores para eventos, categorias y asistentes. - Se implementa el refresh token para recuperar la sesión del usuario.

--- a/src/environments/development.env
+++ b/src/environments/development.env
@@ -3,6 +3,7 @@ APP_PORT=3000
 
 #JWT
 JWT_PVT_KEY=./src/keys/jwt.private.key
+JWT_REFRESH_PVT_KEY=./src/keys/jwt-refresh.private.key
 
 #DATABASE
 HOST=localhost
