--- a/src/environments/test.env
+++ b/src/environments/test.env
@@ -3,6 +3,7 @@ APP_PORT=3000
 
 #JWT
 JWT_PVT_KEY=./src/keys/jwt.private.key
+JWT_REFRESH_PVT_KEY=./src/keys/jwt-refresh.private.key
 
 #DATABASE
 HOST=localhost
